<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_setting"
        android:textSize="40sp" 
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dip"
        />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_tip_voice"
        android:textSize="20sp" 
        android:layout_gravity="center_horizontal"
        />
	<EditText
	    android:id="@+id/edit_voice_key"
	    android:layout_width="250dip" 
	    android:layout_height="wrap_content" 
	    android:layout_gravity="center_horizontal"
	    android:text="@string/key_not_set" 
	    android:gravity="center"
	    android:enabled="false"
	    android:focusable="true"
	    />
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	     android:text="@string/key_tip_up"
        android:textSize="20sp" 
        android:layout_gravity="center_horizontal"
	    />
	<EditText
	    android:id="@+id/edit_up_key"
	    android:layout_width="250dip" 
	    android:layout_height="wrap_content" 
	    android:layout_gravity="center_horizontal"
	    android:text="@string/key_not_set" 
	    android:gravity="center"
	    android:enabled="false"
	    android:focusable="true"
	    />
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	     android:text="@string/key_tip_down"
        android:textSize="20sp" 
        android:layout_gravity="center_horizontal"
	    />
	<EditText
	    android:id="@+id/edit_down_key"
	    android:layout_width="250dip" 
	    android:layout_height="wrap_content" 
	    android:layout_gravity="center_horizontal"
	    android:text="@string/key_not_set" 
	    android:gravity="center"
	    android:enabled="false"
	    android:focusable="true"
	    />
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	     android:text="@string/key_tip_left"
        android:textSize="20sp" 
        android:layout_gravity="center_horizontal"
	    />
	<EditText
	    android:id="@+id/edit_left_key"
	    android:layout_width="250dip" 
	    android:layout_height="wrap_content" 
	    android:layout_gravity="center_horizontal"
	    android:text="@string/key_not_set" 
	    android:gravity="center"
	    android:enabled="false"
	    android:focusable="true"
	    />
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	     android:text="@string/key_tip_right"
        android:textSize="20sp" 
        android:layout_gravity="center_horizontal"
	    />
	<EditText
	    android:id="@+id/edit_right_key"
	    android:layout_width="250dip" 
	    android:layout_height="wrap_content" 
	    android:layout_gravity="center_horizontal"
	    android:text="@string/key_not_set" 
	    android:gravity="center"
	    android:enabled="false"
	    android:focusable="true"
	    />
</LinearLayout>
