<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/filter_bg">
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:layout_gravity="top|left"
	    android:layout_marginLeft="80dp">
	    <LinearLayout android:focusable="false"
	        android:focusableInTouchMode="false"
	        android:orientation="horizontal"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="70dp"
	        android:gravity="left|center_vertical">
	        <View android:layout_width="30dp"
	            android:layout_height="30dp"
	            android:layout_marginLeft="12dp"
	            android:background="@drawable/tab_icon_filter"/>
	        <TextView style="@style/lefttabtoptext"
	            android:textColor="@color/blue_sky"
	            android:text="@string/filter"/>
	    </LinearLayout>
	    <LinearLayout 
	        android:focusable="false"
	        android:focusableInTouchMode="false"
	        android:orientation="horizontal"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/lefttab_top_margin"
	        android:gravity="left|center_vertical">
	        <View android:layout_width="30dp"
	            android:layout_height="30dp"
	             android:layout_marginLeft="12dp"
	            android:background="@drawable/tab_icon_search"/>
	        <TextView style="@style/lefttabtoptext"
	            android:textColor="@color/blue_sky"
	            android:text="@string/search"/>
	    </LinearLayout>
	   <View android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@drawable/tab_line"
	    android:layout_marginTop="@dimen/lefttab_split_margin"/>
	 <TextView
	     android:id="@+id/lefttab1"
	     style="@style/lefttabtext"
         android:textColor="@color/white"
         android:text="@string/tab1"
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:background="@drawable/lefttab_btn_selector"
         android:layout_marginTop="@dimen/lefttab_bottom_margin"/>
	  <TextView 
	     android:id="@+id/lefttab2"
	     style="@style/lefttabtext"
         android:textColor="@color/blue_sky"
         android:text="@string/tab2"
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:layout_marginTop="@dimen/lefttab_bottom_margin"/>
	   <TextView
	     android:id="@+id/lefttab3" 
	     style="@style/lefttabtext"
         android:textColor="@color/blue_sky"
         android:text="@string/tab3"
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:layout_marginTop="@dimen/lefttab_bottom_margin"/>
	    <TextView
	     android:id="@+id/lefttab4"
	     style="@style/lefttabtext"
         android:textColor="@color/blue_sky"
         android:text="@string/tab4"
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:layout_marginTop="@dimen/lefttab_bottom_margin"/>
	     <TextView
	     android:id="@+id/lefttab5" 
	     style="@style/lefttabtext"
         android:textColor="@color/blue_sky"
         android:text="@string/tab5"
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:layout_marginTop="@dimen/lefttab_bottom_margin"/>
	      <TextView
	     android:id="@+id/lefttab6" 
	     style="@style/lefttabtext"
         android:textColor="@color/blue_sky"
         android:text="@string/tab6"
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:layout_marginTop="@dimen/lefttab_bottom_margin"/>
	        <TextView
	     android:id="@+id/lefttab7" 
	     style="@style/lefttabtext"
         android:textColor="@color/blue_sky"
         android:text="@string/tab7"
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:layout_marginTop="@dimen/lefttab_bottom_margin"/>
	</LinearLayout>
	<TextView 
	    android:id="@+id/title"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:layout_gravity="top|center_horizontal"
	    android:textColor="@color/white"
	    android:textSize="40sp"
	    android:text="@string/film" />
	<FrameLayout 
	    android:id="@+id/rootitem"
	    android:layoutAnimation="@anim/layout_animation"
	    android:layout_width="wrap_content"
	    android:layout_height="match_parent"
	    android:layout_gravity="left|top"
	    android:layout_marginLeft="@dimen/rootleftmargin"
	    android:layout_marginTop="@dimen/roottopmargin">
	   <FrameLayout android:layout_width="wrap_content"
	       android:layout_height="wrap_content">
	        <com.example.com.haier.view.ViewItem android:id="@+id/top_big" 
			    android:layout_width="440dp"
			    android:layout_height="290dp"
			    android:focusable="true"
			    android:focusableInTouchMode="true"
			    android:background="@android:color/holo_blue_bright"
			    android:layout_gravity="top|left"
			    android:layout_marginTop="@dimen/topitemtopmargin"
			    android:layout_marginLeft="@dimen/topitemleftmargin"/>
			<com.example.com.haier.view.ViewItem android:id="@+id/top_little1" 
			    android:layout_width="@dimen/topitemwidth"
			    android:layout_height="@dimen/topitemheight"
			    android:focusable="true"
			    android:focusableInTouchMode="true"
			    android:background="@android:color/holo_blue_bright"
			    android:layout_gravity="top|left"
			     android:layout_marginTop="@dimen/topitemtopmargin"
			    android:layout_marginLeft="@dimen/topcolume1itemleftmargin"/>
			<com.example.com.haier.view.ViewItem android:id="@+id/top_little2" 
			    android:layout_width="@dimen/topitemwidth"
			    android:layout_height="@dimen/topitemheight"
			    android:focusable="true"
			    android:focusableInTouchMode="true"
			    android:background="@android:color/holo_blue_bright"
			    android:layout_gravity="top|left"
			     android:layout_marginTop="@dimen/topitemtopmargin"
			    android:layout_marginLeft="@dimen/topcolume2itemleftmargin"/>
			<com.example.com.haier.view.ViewItem android:id="@+id/top_little3" 
			    android:layout_width="@dimen/topitemwidth"
			    android:layout_height="@dimen/topitemheight"
			    android:focusable="true"
			    android:focusableInTouchMode="true"
			    android:background="@android:color/holo_blue_bright"
			    android:layout_gravity="top|left"
			    android:layout_marginTop="@dimen/topline2itemmargin"
			    android:layout_marginLeft="@dimen/topcolume1itemleftmargin"/>
			<com.example.com.haier.view.ViewItem android:id="@+id/top_little4" 
			    android:layout_width="@dimen/topitemwidth"
			    android:layout_height="@dimen/topitemheight"
			    android:focusable="true"
			    android:focusableInTouchMode="true"
			    android:background="@android:color/holo_blue_bright"
			    android:layout_gravity="top|left"
			    android:layout_marginTop="@dimen/topline2itemmargin"
			    android:layout_marginLeft="@dimen/topcolume2itemleftmargin"/>
			<com.example.com.haier.view.ViewItem android:id="@+id/bottom_little1" 
			    android:layout_width="@dimen/topitemwidth"
			    android:layout_height="@dimen/bottomitemheight"
			    android:focusable="true"
			    android:focusableInTouchMode="true"
			    android:layout_gravity="top|left"
			    style="@style/itemtext"
			    android:layout_marginLeft="@dimen/topitemleftmargin"
			    android:layout_marginTop="@dimen/bottomitemtopmargin"/>
			<com.example.com.haier.view.ViewItem android:id="@+id/bottom_little2" 
			    android:layout_width="@dimen/topitemwidth"
			    android:layout_height="@dimen/bottomitemheight"
			    android:focusable="true"
			    android:focusableInTouchMode="true"
			    android:layout_gravity="top|left"
			    style="@style/itemtext"
			    android:layout_marginTop="@dimen/bottomitemtopmargin"
			    android:layout_marginLeft="257dp"/>
			<com.example.com.haier.view.ViewItem android:id="@+id/bottom_little3" 
			    android:layout_width="@dimen/topitemwidth"
			    android:layout_height="@dimen/bottomitemheight"
			    android:focusable="true"
			    android:focusableInTouchMode="true"
			    android:layout_gravity="top|left"
			    style="@style/itemtext"
			    android:layout_marginTop="@dimen/bottomitemtopmargin"
			    android:layout_marginLeft="@dimen/topcolume1itemleftmargin"/>
			<com.example.com.haier.view.ViewItem android:id="@+id/bottom_little4" 
			    android:layout_width="@dimen/topitemwidth"
			    android:layout_height="@dimen/bottomitemheight"
			    android:focusable="true"
			    android:focusableInTouchMode="true"
			    android:layout_gravity="top|left"
			    style="@style/itemtext"
			    android:layout_marginTop="@dimen/bottomitemtopmargin"
			    android:layout_marginLeft="@dimen/topcolume2itemleftmargin"/>
			<com.example.com.haier.view.FocusView
		        android:id="@+id/focus_view"
		        android:focusable="false"
		        android:focusableInTouchMode="false"
		        android:clickable="false"
		        android:scaleType="fitXY"
		        android:visibility="invisible"
		        android:layout_width="440dp"
			    android:layout_height="290dp"
			    android:layout_gravity="top|left"
			    android:layout_marginTop="@dimen/topitemtopmargin"
			    android:layout_marginLeft="@dimen/topitemleftmargin"
		        android:src="@drawable/focus_selector" />
			<com.example.com.haier.view.ViewItem android:id="@+id/in_top_big" 
			    android:layout_width="440dp"
			    android:layout_height="290dp"
			    android:focusable="false"
			    android:focusableInTouchMode="false"
			    android:clickable="false"
			    android:background="@android:color/holo_green_light"
			    android:layout_gravity="top|left"
			    android:layout_marginTop="@dimen/topitemtopmargin"
			    android:layout_marginLeft="@dimen/topitemleftmargin"/>
			<View 
			    android:layout_width="@dimen/topitemwidth"
			    android:layout_height="@dimen/bottomitemheight"
			    android:focusable="false"
			    android:focusableInTouchMode="false"
			    android:clickable="false"
			    android:background="@android:color/transparent"
			    android:layout_gravity="top|left"
			    android:layout_marginTop="390dp"
			    android:layout_marginLeft="780dp"/> 
	   </FrameLayout>
	</FrameLayout>
</FrameLayout>
